--- a/index.html
+++ b/index.html
@@ -58,10 +58,11 @@
     <div class="site-content">
       <div class="d-flex justify-content-center">
         <div class="d-flex flex-column">
-          <h1 class="site-title">My Responive Site 1</h1>
+          <h1 class="site-title">My Responsive Site 1</h1>
           <p class="site-desc">It's always good to learn and master new ways of building websites</p>
           <div class="d-flex flex-row">
-            <input type="button" value="Buy Template" class="btn site-btn1 px-4 py-3 mr-4">
+            <input type="button" value="Buy Template" class="btn site-btn1 px-4 py-3 mr-4 btn-dark">
+            <input type="button" value="Features" class="btn site-btn2 px-4 py-3 mr-4 btn-light">
           </div>
         </div>
       </div>
