--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 <!-- main  -->
 <main>
-  <div class="container-fluid">
+  <div class="container-fluid p-0">
     <div class="site-content">
       <div class="d-flex justify-content-center">
         <div class="d-flex flex-column">
@@ -68,6 +68,53 @@
       </div>
     </div>
   </div>
+
+<div class="section-1">
+  <div class="container text-center">
+    <h1 class="heading-1">Fantastic Features</h1>
+    <h1 class="heading-2">& different type of templates</h1>
+    <p class="para-1">
+      Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book. It usually begins with
+    </p>
+    <div class="row justify-content-center text-center">
+      <div class="col-md-4">
+        <div class="card">
+       <img src="images/image1.jpg" alt="image-top">
+        </div>
+        <div class="card-body">
+          <h4 class="card-title">Responsive</h4>
+          <p class="card-text">
+            The passage experienced a surge in popularity during the 1960s when Letraset used it on their dry-transfer sheets, and again during the 90s as desktop publishers bundled the text with their software
+          </p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card">
+       <img src="images/image2.jpg" alt="image-top">
+        </div>
+        <div class="card-body">
+          <h4 class="card-title">Flexible</h4>
+          <p class="card-text">
+            The passage experienced a surge in popularity during the 1960s when Letraset used it on their dry-transfer sheets, and again during the 90s as desktop publishers bundled the text with their software
+          </p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card">
+       <img src="images/image3.jpg" alt="image-top">
+        </div>
+        <div class="card-body">
+          <h4 class="card-title">UI/UX</h4>
+          <p class="card-text">
+            The passage experienced a surge in popularity during the 1960s when Letraset used it on their dry-transfer sheets, and again during the 90s as desktop publishers bundled the text with their software
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 </main>
 </body>
 </html>
