added new buttons

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!--header  -->
 <header>
   <nav class="navbar navbar-expand-lg navbar-light">
-    <a href="#" class="navbar-brand ml-3"><span style="color:#e74c3c">Tidre's</span><span style="color:#2980b9"> Website</span></a>
+    <a href="#" class="navbar-brand ml-3"><span style="color:#e74c3c">Tidre</span><span style="color:#2980b9">'s Website</span></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse"
     data-target="#navbarMenu" area-controls="navbarMenu"
       area-expanded="false" area-label="toggle Navigation"
@@ -86,6 +86,7 @@
           <p class="card-text">
             The passage experienced a surge in popularity during the 1960s when Letraset used it on their dry-transfer sheets, and again during the 90s as desktop publishers bundled the text with their software
           </p>
+          <button class="btn btn-secondary" type="button" value="Lean more">Learn More</button>
         </div>
       </div>
       <div class="col-md-4">
@@ -97,6 +98,7 @@
           <p class="card-text">
             The passage experienced a surge in popularity during the 1960s when Letraset used it on their dry-transfer sheets, and again during the 90s as desktop publishers bundled the text with their software
           </p>
+          <button class="btn btn-secondary" type="button" value="Lean more">Learn More</button>
         </div>
       </div>
       <div class="col-md-4">
@@ -108,6 +110,7 @@
           <p class="card-text">
             The passage experienced a surge in popularity during the 1960s when Letraset used it on their dry-transfer sheets, and again during the 90s as desktop publishers bundled the text with their software
           </p>
+          <button class="btn btn-secondary" type="button" value="Lean more">Learn More</button>
         </div>
       </div>
     </div>
